framec_tests/language_specific/c/v3_outline/negative/test_action_with_frame.frm
@target c

action X
{
-> $Y
}

